// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can jump focus back & forth 1`] = `
"<!-- wp:button -->
<div class=\\"wp-block-button\\"><a class=\\"wp-block-button__link\\" href=\\"https://wordpress.org\\">WordPress</a></div>
<!-- /wp:button -->"
`;

exports[`Button has focus on button content 1`] = `
"<!-- wp:button -->
<div class=\\"wp-block-button\\"><a class=\\"wp-block-button__link\\">Content</a></div>
<!-- /wp:button -->"
`;
